sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:9: error: ';' expected but ',' found.
      if (!plusPetit(i-1,i)) {echange(i-1,i),b=1}; 
                                            ^