sort.basic.bubble.AlgBubbleSort1.scala.code

def bubbleSort()  {
	for (i <- 1 to 9) {
    var b:Int=1

    while (b==1) {
      b=0
      if (!plusPetit(i-1,i)) {echange(i-1,i),b=1}; 
    }
    
  	
  
}
}